fix(quartz): synchronize 5-minute trigger with overwrite-existing-jobs and enhance EXTERNAL_PING_URL resolution